(fix) styling of dark mode button

--- a/src/scss/components/Header.scss
+++ b/src/scss/components/Header.scss
@@ -14,15 +14,10 @@ header {
     justify-content: space-between;
 
     button {
-      padding: 0;
-      font: inherit;
-      color: inherit;
       background: none;
-      color: white;
       border: 1px solid $divider;
+      font-size: 15px;
       border-radius: 8px;
-      cursor: pointer;
-      padding-left: 0.6ch;
     }
   }
 }
